# dd-event-rs

./: .dockerignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: release-please.yml  release.yml  test.yml
src/: args.rs  main.rs
