[workspace]
resolver = "2"
members = []

[package]
name = "dd-event"
version = "0.2.0"
edition = "2021"
authors = ["Andrew Herrington <andrew@💻.kz>"]
readme = "README.md"
license = "MIT"

[features]
default = []

[dependencies]
anyhow = "~1.0"
clap = { version = "~3.2", features = ["derive"] }
env_logger = "^0.10.0"
log = "^0.4.17"
reqwest = { version = "^0.11", default-features = false, features = [
  "json",
  "blocking",
  "rustls-tls",
] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tokio = { version = "~1.27", features = ["rt", "rt-multi-thread", "macros"] }


[dev-dependencies]
tokio = { version = "~1.27", features = ["test-util", "macros"] }
tokio-test = "~0.4"
